--- a/client/index.html
+++ b/client/index.html
@@ -6,11 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Essay Grader</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/styles.css">
 </head>
-<body class="h-100 d-flex flex-column">
-    <nav class="navbar navbar-dark bg-primary">
-        <a class="navbar-brand ms-3" href="/">Essay Grader</a>
-    </nav>
-
-    <main class="p-3 flex-grow-1">
+<body class="h-100">
+    <div id="app" class="h-100 d-flex flex-column"></div>
+    <script type="module" src="/src/main.ts"></script>
+</body>
+</html>
